test.txt
warning: unused import: `BufWriter`
  --> crates/core/src/converter.rs:17:19
   |
17 |     io::{BufRead, BufWriter, Cursor, Read},
   |                   ^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: unused imports: `Arena`, `AstNode`, `ComrakOptions`, `ComrakPlugins`, `NodeValue`, `markdown_to_html_with_plugins`, and `plugins::syntect::SyntectAdapter`
  --> crates/core/src/converter.rs:24:5
   |
24 |     Arena, ComrakOptions, ComrakPlugins, markdown_to_html_with_plugins,
   |     ^^^^^  ^^^^^^^^^^^^^  ^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
25 |     nodes::{AstNode, NodeValue},
   |             ^^^^^^^  ^^^^^^^^^
26 |     plugins::syntect::SyntectAdapter,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0061]: this function takes 4 arguments but 3 arguments were supplied
   --> crates/core/src/markdown.rs:219:13
    |
219 |             format_code(code, lang, ctx);
    |             ^^^^^^^^^^^             --- argument #3 of type `&str` is missing
    |
note: function defined here
   --> crates/core/src/markdown.rs:320:4
    |
320 | fn format_code(code: &str, lang: &str, header: &str, ctx: &mut AnsiContext) {
    |    ^^^^^^^^^^^                         ------------
help: provide the argument
    |
219 -             format_code(code, lang, ctx);
219 +             format_code(code, lang, /* &str */, ctx);
    |

warning: unused variable: `surface`
   --> crates/core/src/markdown.rs:322:9
    |
322 |     let surface = ctx.theme.surface.bg.clone();
    |         ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_surface`
    |
    = note: `#[warn(unused_variables)]` on by default

For more information about this error, try `rustc --explain E0061`.
error: could not compile `mcat` (bin "mcat") due to 1 previous error; 3 warnings emitted
